--- a/lab1/NLP1_2021_Practical_1_(student_version)-ngram.ipynb
+++ b/lab1/NLP1_2021_Practical_1_(student_version)-ngram.ipynb
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,15 +484,8 @@
     "        doc = doc[idx]\n",
     "        filtered_docs.append([doc.tolist()])\n",
     "    \n",
-    "    return filtered_docs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return filtered_docs\n",
+    "\n",
     "def compute_accuracy(y_true: list, y_pred: list):\n",
     "    y_true = np.array(y_true)\n",
     "    y_pred = np.array(y_pred)\n",
