Ran all experiments

--- a/lab2/NLP1_2021_Practical_2_Piyush-cleaned.ipynb
+++ b/lab2/NLP1_2021_Practical_2_Piyush-cleaned.ipynb
@@ -118,11 +118,7 @@
    },
    "outputs": [],
    "source": [
-    "# this function reads in a textfile and fixes an issue with \"\\\\\"\n",
-    "def filereader(path):\n",
-    "    with open(path, mode=\"r\", encoding=\"utf-8\") as f:\n",
-    "        for line in f:\n",
-    "            yield line.strip().replace(\"\\\\\",\"\")"
+    "from utils.io import filereader"
    ]
   },
   {
@@ -209,7 +205,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils.text import SHIFT, REDUCE, tokens_from_treestring, transitions_from_treestring"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {
     "id": "DKynLm0xPKr2"
    },
@@ -224,12 +229,6 @@
     }
    ],
    "source": [
-    "# Let's first make a function that extracts the tokens (the leaves).\n",
-    "\n",
-    "def tokens_from_treestring(s):\n",
-    "    \"\"\"extract the tokens from a sentiment tree\"\"\"\n",
-    "    return re.sub(r\"\\([0-9] |\\)\", \"\", s).split()\n",
-    " \n",
     "# let's try it on our example tree\n",
     "tokens = tokens_from_treestring(s)\n",
     "print(tokens)\n",
@@ -247,31 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "id": "Akr9K_Mv4dym"
-   },
-   "outputs": [],
-   "source": [
-    "# We will also need the following function, but you can ignore this for now.\n",
-    "# It is explained later on.\n",
-    "\n",
-    "SHIFT = 0\n",
-    "REDUCE = 1\n",
-    "\n",
-    "\n",
-    "def transitions_from_treestring(s):\n",
-    "    s = re.sub(\"\\([0-5] ([^)]+)\\)\", \"0\", s)\n",
-    "    s = re.sub(\"\\)\", \" )\", s)\n",
-    "    s = re.sub(\"\\([0-4] \", \"\", s)\n",
-    "    s = re.sub(\"\\([0-4] \", \"\", s)\n",
-    "    s = re.sub(\"\\)\", \"1\", s)\n",
-    "    return list(map(int, s.split()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {
     "id": "mNtPdlwPgRat"
    },
@@ -315,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {
     "id": "4I07Hb_-q8wg"
    },
@@ -331,23 +306,7 @@
     }
    ],
    "source": [
-    "from collections import namedtuple\n",
-    "from nltk import Tree\n",
-    "\n",
-    "# A simple way to define a class is using namedtuple.\n",
-    "Example = namedtuple(\"Example\", [\"tokens\", \"tree\", \"label\", \"transitions\"])\n",
-    "\n",
-    "   \n",
-    "def examplereader(path, lower=False):\n",
-    "    \"\"\"Returns all examples in a file one by one.\"\"\"\n",
-    "    for line in filereader(path):\n",
-    "        line = line.lower() if lower else line\n",
-    "        tokens = tokens_from_treestring(line)\n",
-    "        tree = Tree.fromstring(line)  # use NLTK's Tree\n",
-    "        label = int(line[1])\n",
-    "        trans = transitions_from_treestring(line)\n",
-    "        yield Example(tokens=tokens, tree=tree, label=label, transitions=trans)\n",
-    "\n",
+    "from data.example import Example, examplereader\n",
     "\n",
     "# Let's load the data into memory.\n",
     "LOWER = False  # we will keep the original casing\n",
@@ -371,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {
     "id": "J8mwcaZwxP1c"
    },
@@ -405,55 +364,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {
     "id": "VvNgKx7usRSt"
    },
    "outputs": [],
    "source": [
-    "# Here we first define a class that can map a word to an ID (w2i)\n",
-    "# and back (i2w).\n",
-    "\n",
-    "from collections import Counter, OrderedDict, defaultdict\n",
-    "\n",
-    "\n",
-    "class OrderedCounter(Counter, OrderedDict):\n",
-    "    \"\"\"Counter that remembers the order elements are first seen\"\"\"\n",
-    "    def __repr__(self):\n",
-    "        return '%s(%r)' % (self.__class__.__name__, OrderedDict(self))\n",
-    "\n",
-    "    def __reduce__(self):\n",
-    "        return self.__class__, (OrderedDict(self),)\n",
-    "\n",
-    "\n",
-    "class Vocabulary:\n",
-    "    \"\"\"A vocabulary, assigns IDs to tokens\"\"\"\n",
-    "\n",
-    "    def __init__(self):\n",
-    "        self.freqs = OrderedCounter()\n",
-    "        self.w2i = {}\n",
-    "        self.i2w = []\n",
-    "\n",
-    "    def count_token(self, t):\n",
-    "        self.freqs[t] += 1\n",
-    "\n",
-    "    def add_token(self, t):\n",
-    "        self.w2i[t] = len(self.w2i)\n",
-    "        self.i2w.append(t)\n",
-    "\n",
-    "    def build(self, min_freq=0):\n",
-    "        '''\n",
-    "        min_freq: minimum number of occurrences for a word to be included  \n",
-    "                  in the vocabulary\n",
-    "        '''\n",
-    "        self.add_token(\"<unk>\")  # reserve 0 for <unk> (unknown words)\n",
-    "        self.add_token(\"<pad>\")  # reserve 1 for <pad> (discussed later)   \n",
-    "\n",
-    "        tok_freq = list(self.freqs.items())\n",
-    "        tok_freq.sort(key=lambda x: x[1], reverse=True)\n",
-    "        for tok, freq in tok_freq:\n",
-    "            if freq >= min_freq:\n",
-    "                self.add_token(tok)"
+    "from data.vocabulary import OrderedDict, Vocabulary"
    ]
   },
   {
@@ -470,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {
     "id": "GwGQgQQBNUSq"
    },
@@ -508,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {
     "id": "oJyuogmh0CA7"
    },
@@ -519,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +445,7 @@
        "1973"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {
     "id": "O8OkPQ8Zv-rI"
    },
@@ -550,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +476,7 @@
        "['<unk>', '<pad>', '.', ',', 'the', 'and', 'a', 'of', 'to', \"'s\"]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {
     "id": "kmXwu02lOLWI"
    },
@@ -581,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +516,7 @@
        " ('that', 1915)]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {
     "id": "__NDPaCeOT_m"
    },
@@ -622,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +548,7 @@
        "9543"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {
     "id": "xKHocugctZGM"
    },
@@ -655,18 +572,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['opposed', 'someone', 'thoroughly', 'trailer', 'instilled',\n",
-       "       'top-heavy', 'searing', 'star', 'resoundingly', 'two-fifths'],\n",
+       "array(['Bentley', 'counterproductive', 'walked', 'pitched', 'VH1',\n",
+       "       'dullest', 'highest', 'Reminiscent', 'swill', 'admire'],\n",
        "      dtype='<U27')"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -686,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {
     "id": "AmTC-rvQelpl"
    },
@@ -709,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "metadata": {
     "id": "D7UI26DP2dr2"
    },
@@ -747,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "metadata": {
     "id": "qKQMGtkR5KWr"
    },
@@ -767,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "metadata": {
     "id": "mnvPcd_E1xH8"
    },
@@ -780,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "metadata": {
     "id": "BYt8uTyGCKc7"
    },
@@ -791,7 +708,7 @@
        "device(type='cpu')"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -805,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "metadata": {
     "id": "2d1VMOOYx1Bw"
    },
@@ -845,16 +762,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils import plot_single_categorical_histogram, plot_multiple_categorical_histogram"
+    "from utils.plot import plot_single_categorical_histogram, plot_multiple_categorical_histogram"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -867,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -896,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 38,
    "metadata": {
     "tags": []
    },
@@ -943,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -977,16 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_sentence_lengths = np.array([len(e.tokens) for e in train_data])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1001,6 +909,8 @@
     }
    ],
    "source": [
+    "train_sentence_lengths = np.array([len(e.tokens) for e in train_data])\n",
+    "\n",
     "fig, ax = plt.subplots(1, 1, figsize=(7, 4), constrained_layout=True)\n",
     "\n",
     "for label in [0, 1, 2, 3, 4]:\n",
@@ -1482,7 +1392,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils import plot_single_sequence, plot_two_sequences"
+    "from utils.plot import plot_single_sequence, plot_two_sequences"
    ]
   },
   {
@@ -2874,7 +2784,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils import load_txt"
+    "from utils.io import load_txt"
    ]
   },
   {
@@ -4700,7 +4610,11 @@
    "cell_type": "code",
    "execution_count": 112,
    "metadata": {
+    "collapsed": true,
     "id": "IpOYUdg2D3v0",
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
