--- a/lab2/NLP1_2021_Practical_2_source.ipynb
+++ b/lab2/NLP1_2021_Practical_2_source.ipynb
@@ -1250,11 +1250,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "6NLsgFGiTjmI"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2021-12-13 00:52:09--  https://gist.githubusercontent.com/bastings/4d1c346c68969b95f2c34cfbc00ba0a0/raw/76b4fefc9ef635a79d0d8002522543bc53ca2683/googlenews.word2vec.300d.txt\n",
+      "Resolving gist.githubusercontent.com (gist.githubusercontent.com)... 185.199.109.133, 185.199.108.133, 185.199.110.133, ...\n",
+      "Connecting to gist.githubusercontent.com (gist.githubusercontent.com)|185.199.109.133|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 66209703 (63M) [text/plain]\n",
+      "Saving to: ‘googlenews.word2vec.300d.txt’\n",
+      "\n",
+      "googlenews.word2vec 100%[===================>]  63.14M  10.9MB/s    in 6.2s    \n",
+      "\n",
+      "2021-12-13 00:52:16 (10.2 MB/s) - ‘googlenews.word2vec.300d.txt’ saved [66209703/66209703]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# This downloads the word2vec 300D Google News vectors \n",
     "# The file has been truncated to only contain words that appear in our data set.\n",
@@ -2882,7 +2900,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
