--- a/lab2/NLP1_2021_Practical_2-final.ipynb
+++ b/lab2/NLP1_2021_Practical_2-final.ipynb
@@ -154,7 +154,9 @@
     "3. Then, we have a section per research question. In each of these sections, we specify the research question, implement the experiment and display/save the results.\n",
     "4. Finally, we also add a section on data analysis where we analyze various aspects of the dataset. This was not explicitly part of the assignment, but before running any of our experiments, we thought it may be insightful to look at data.\n",
     "\n",
-    "The Table of contents is provided below for easy navigation."
+    "The Table of contents is provided below for easy navigation.\n",
+    "\n",
+    "> Note: When you run the first model, if the data does not exist at `./trees/`, it will automatically download the data. When you run `PTDeepCBOW`, it will also download the Google `word2vec` vectors."
    ]
   },
   {
